[package]
name = "farbeimer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
colored = "2.0.4"
image = "0.24.7"
kmeans_colors = { version = "0.6.0", default-features = false, features = ["palette_color"] }
once_cell = "1.18.0"
palette = "0.7.3"
serde = { version = "1.0.192", features = ["derive"] }
tinytemplate = "1.2.1"
